2002-09-16  Jochen Wiedmann  <joe@ispsoft.de> (0.2019)

	* Added hints to installing DBD::mysql with PPM 3.
	  (Stefan Prehn, stefanprehngmx.de)
	* Added $DBD::mysql::CLONE

2002-08-12  Jochen Wiedmann  <joe@ispsoft.de> (0.2018)

	* t/dbdadmin.t: The call to func('createdb') was
	  missing user name and password. Wolfgang Friebel
	  <friebel@ifh.de>
	* mysql.xs: If the connect in func('...', 'admin')
	  failed, a core dump was triggered. Wolfgang
	  Friebel <friebelqifh.de>

2002-05-02  Jochen Wiedmann  <joe@ispsoft.de> (0.2017)

	* dbdimp.c: Added a required check for mysql_errno.
	  Steve Hay <Steve.Hay@uk.radan.com>

2002-05-01  Jochen Wiedmann  <joe@ispsoft.de> (0.2016)

	* dbdimp.c: Removed use of mysql_eof. Jay
	  Lawrence <jay@lawrence.net>

2002-04-30  Jochen Wiedmann  <joe@ispsoft.de> (0.2015)

	* Makefile.PL: Removed dbimon and pmysql from
	  the EXE_FILES list. Andreas Koenig
	  <andreas.koenig@anima.de>

2002-04-17  Jochen Wiedmann  <joe@ispsoft.de> (2.1014)

	* dbdimp.c: Fixed mysql_is_auto_increment.
	  Paul Walmsley <shag-dbdmysql@booyaka.com> and
	  Paul Dubois <paul@kitebird.org>

2002-04-12  Jochen Wiedmann  <joe@ispsoft.de> (2.1013)

	* dbdimp.c: Added use of mysql_ssl_set.
	  Chris Hanes <chanes@i-c.net>

2002-04-12  Jochen Wiedmann  <joe@ispsoft.de> (2.1012)

	* Some fixes in the docs. Paul Dubois <paul@kitebird.com>
	* Added mysql_is_auto_increment. (Someone else, but forgot
	  his email, sorry!)

2002-02-12  Jochen Wiedmann  <joe@ispsoft.de> (2.1011)

        * Makefile.PL: DBI::DBD is no longer loaded by
          default, to allow CPAN's requirements detection
          note and install a missing DBI.

2001-12-28  Jochen Wiedmann  <joe@ispsoft.de> (2.1010)

	* Bumped version number in Mysql/Statement.pm to
	  1.24, so that it is always higher than that 
	  from the Msql-Mysql-modules.
	

2001-12-28  Jochen Wiedmann  <joe@ispsoft.de> (2.1008)

	* lib/DBD/mysql.pod: Fixed minor bug in an example.
